<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Hello">Hello</string>
    <string name="Calendar">CALENDAR</string>
    <string name="Chart">CHART</string>
    <string name="Challenge">CHALLENGE</string>
    <string name="More">MORE</string>
    <string name="Info">Tips</string>
    <string name="tipText">Set a small, achievable short-term goal for something fun and big enough.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>